--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <span class="section__subtitle">Most Recent Work</span>
       <div class="work__container bd-grid">
         <div class="work__img">
-          <a href="https://warm-cliffs-54029.herokuapp.com/" target="_blank">
+          <a href="https://react-multipage.herokuapp.com/" target="_blank">
             <img src="assets/img/work1.jpg" alt="">
             <p>Simple SignUp Page</p>
           </a>
@@ -226,7 +226,7 @@
 
         </div>
         <div class="work__img">
-          <a href="https://addcontactlist.herokuapp.com/" target="_blank">
+          <a href="https://apidatalis.herokuapp.com/" target="_blank">
                 <img src="assets/img/work3.jpg" alt="">
                 <p>Contact List</p>
           </a>
