--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="work__img">
           <a href="https://react-multipage.herokuapp.com/" target="_blank">
             <img src="assets/img/work1.jpg" alt="">
-            <p>Simple SignUp Page</p>
+            <p>React multipage form</p>
           </a>
 
         </div>
@@ -228,7 +228,7 @@
         <div class="work__img">
           <a href="https://apidatalis.herokuapp.com/" target="_blank">
                 <img src="assets/img/work3.jpg" alt="">
-                <p>Contact List</p>
+                <p>React data from placeHoder API</p>
           </a>
 
         </div>
