edited the name for work 2 as job portal
This job portal website is made with complete MERN stact

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="work__img">
           <a href="https://blogwithdata.herokuapp.com" target="_blank">
             <img src="assets/img/work2.jpg" alt="">
-            <p>Blog with database</p>
+            <p>Job portal website</p>
           </a>
 
         </div>
