--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
         <div class="work__img">
           <a href="https://blogwithdata.herokuapp.com" target="_blank">
-            <img src="assets/img/work2.jpg" alt="">
+            <img src="assets/img/work2.png" alt="">
             <p>Job portal website</p>
           </a>
 
