updted the jobportal site

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         </div>
         <div class="work__img">
-          <a href="https://blogwithdata.herokuapp.com" target="_blank">
+          <a href="https://weeklyjobs.herokuapp.com/" target="_blank">
             <img src="assets/img/work2.png" alt="">
             <p>Job portal website</p>
           </a>
