updated prachinherbs work

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
 
         </div>
         <div class="work__img">
-          <a href="https://makesanjoy.github.io/drumset/" target="_blank">
-            <img src="assets/img/work5.jpg" alt="">
+          <a href="https://prachinherbs.com/" target="_blank">
+            <img src="assets/img/work5.png" alt="">
             <p>Drumset</p>
           </a>
 
