--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="work__img">
           <a href="https://prachinherbs.com/" target="_blank">
             <img src="assets/img/work5.png" alt="">
-            <p>Drumset</p>
+            <p>Prachin herbs Ecommerce</p>
           </a>
 
         </div>
