updated the work6

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
         </div>
         <div class="work__img">
           <a href="https://makesanjoy.github.io/Simple-dice-game/" target="_blank">
-                <img src="assets/img/work6.jpg" alt="">
-                <p>Simple Dice game</p>
+                <img src="assets/img/work6.png" alt="">
+                <p>Synergistic Biotech</p>
           </a>
 
         </div>
