--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- =====Bootstrap ICONS===== -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-  <title>Portfolio website complete</title>
+  <title>My Portfilio</title>
 </head>
 
 <body>
